Fixed Dataframe Indexing to index based off of image name instead of number. Added new IPYNB for ML Model

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -14,8 +14,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:13.514272Z",
-     "start_time": "2025-03-27T17:35:13.465047Z"
+     "end_time": "2025-03-27T19:37:18.810058Z",
+     "start_time": "2025-03-27T19:37:18.681760Z"
     }
    },
    "source": [
@@ -37,8 +37,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:14.430076Z",
-     "start_time": "2025-03-27T17:35:13.516958Z"
+     "end_time": "2025-03-27T19:37:19.658304Z",
+     "start_time": "2025-03-27T19:37:18.812676Z"
     }
    },
    "source": [
@@ -85,8 +85,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:16.395222Z",
-     "start_time": "2025-03-27T17:35:14.528231Z"
+     "end_time": "2025-03-27T19:37:22.457157Z",
+     "start_time": "2025-03-27T19:37:19.733629Z"
     }
    },
    "source": [
@@ -151,8 +151,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:17.010991Z",
-     "start_time": "2025-03-27T17:35:16.404815Z"
+     "end_time": "2025-03-27T19:37:23.181396Z",
+     "start_time": "2025-03-27T19:37:22.469938Z"
     }
    },
    "source": [
@@ -216,8 +216,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:17.694204Z",
-     "start_time": "2025-03-27T17:35:17.021270Z"
+     "end_time": "2025-03-27T19:37:23.909733Z",
+     "start_time": "2025-03-27T19:37:23.191845Z"
     }
    },
    "source": [
@@ -277,8 +277,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:18.316375Z",
-     "start_time": "2025-03-27T17:35:17.705596Z"
+     "end_time": "2025-03-27T19:37:24.696982Z",
+     "start_time": "2025-03-27T19:37:23.921101Z"
     }
    },
    "source": [
@@ -333,8 +333,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:18.345670Z",
-     "start_time": "2025-03-27T17:35:18.329250Z"
+     "end_time": "2025-03-27T19:37:24.728163Z",
+     "start_time": "2025-03-27T19:37:24.708616Z"
     }
    },
    "cell_type": "code",
@@ -343,7 +343,6 @@
     "\n",
     "for image in range(num_images):\n",
     "    Plant_Data.append([\n",
-    "        filename[image],\n",
     "        num_edges[image],\n",
     "        mean_frequency_real[image],\n",
     "        mean_frequency_imaginary[image],\n",
@@ -357,9 +356,10 @@
     "        Type[image],\n",
     "    ])\n",
     "\n",
-    "feature_names = ['Image', 'Edge_Count', 'Re(Mean_Frequency)', 'Im(Mean_Frequency)', 'Frequency_Variance', 'StDev_Contrast', 'Mean_Noise', 'StDev_Noise', 'Minimum_Intensity', 'Maximum_Intensity', 'Is_Healthy', 'Disease']\n",
+    "feature_names = ['Edge_Count', 'Re(Mean_Frequency)', 'Im(Mean_Frequency)', 'Frequency_Variance', 'StDev_Contrast', 'Mean_Noise', 'StDev_Noise', 'Minimum_Intensity', 'Maximum_Intensity', 'Is_Healthy', 'Disease']\n",
     "\n",
     "Plant_Dataset = pd.DataFrame(Plant_Data, columns=feature_names)\n",
+    "Plant_Dataset.index = filename\n",
     "Plant_Dataset.to_csv('Feature_Extracted_Plant_Dataset.csv', index=False)"
    ],
    "outputs": [],
@@ -368,8 +368,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:18.370367Z",
-     "start_time": "2025-03-27T17:35:18.359856Z"
+     "end_time": "2025-03-27T19:37:24.755268Z",
+     "start_time": "2025-03-27T19:37:24.744084Z"
     }
    },
    "cell_type": "code",
@@ -550,8 +550,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:18.437149Z",
-     "start_time": "2025-03-27T17:35:18.431249Z"
+     "end_time": "2025-03-27T19:37:24.780064Z",
+     "start_time": "2025-03-27T19:37:24.770958Z"
     }
    },
    "cell_type": "code",
@@ -560,46 +560,46 @@
     {
      "data": {
       "text/plain": [
-       "                 Image  Edge_Count  Re(Mean_Frequency)  Im(Mean_Frequency)  \\\n",
-       "0      image (263).jpg        1111            0.484367       -2.818926e-18   \n",
-       "1      image (799).jpg        1476            0.374271        5.366801e-17   \n",
-       "2     image (1385).jpg        1749            0.304890        3.632077e-17   \n",
-       "3     image (1405).jpg        3357            0.427836        2.255141e-17   \n",
-       "4      image (388).jpg        1210            0.451401       -8.673617e-18   \n",
-       "...                ...         ...                 ...                 ...   \n",
-       "1495  image (1772).jpg        3122            0.728791        1.864828e-17   \n",
-       "1496   image (892).jpg        6965            0.555556        6.938894e-18   \n",
-       "1497   image (780).jpg       13604            0.531126        6.938894e-18   \n",
-       "1498   image (372).jpg        4830            0.421178        2.255141e-17   \n",
-       "1499   image (936).jpg        7014            0.559309        5.984796e-17   \n",
+       "                  Edge_Count  Re(Mean_Frequency)  Im(Mean_Frequency)  \\\n",
+       "image (263).jpg         1111            0.484367       -2.818926e-18   \n",
+       "image (799).jpg         1476            0.374271        5.366801e-17   \n",
+       "image (1385).jpg        1749            0.304890        3.632077e-17   \n",
+       "image (1405).jpg        3357            0.427836        2.255141e-17   \n",
+       "image (388).jpg         1210            0.451401       -8.673617e-18   \n",
+       "...                      ...                 ...                 ...   \n",
+       "image (1772).jpg        3122            0.728791        1.864828e-17   \n",
+       "image (892).jpg         6965            0.555556        6.938894e-18   \n",
+       "image (780).jpg        13604            0.531126        6.938894e-18   \n",
+       "image (372).jpg         4830            0.421178        2.255141e-17   \n",
+       "image (936).jpg         7014            0.559309        5.984796e-17   \n",
        "\n",
-       "      Frequency_Variance  StDev_Contrast  Mean_Noise  StDev_Noise  \\\n",
-       "0            1701.684807        0.144301    0.071738     0.144301   \n",
-       "1            5247.412525        0.228525    0.166876     0.228525   \n",
-       "2            6443.700026        0.251777    0.186903     0.251777   \n",
-       "3            6961.454301        0.269340    0.183527     0.269340   \n",
-       "4            3356.495539        0.191576    0.120490     0.191576   \n",
-       "...                  ...             ...         ...          ...   \n",
-       "1495        28356.807145        0.086109    0.652138     0.086109   \n",
-       "1496        15556.956061        0.096675    0.477534     0.096675   \n",
-       "1497        27712.195356        0.108694    0.641127     0.108694   \n",
-       "1498        26638.859475        0.092776    0.630771     0.092776   \n",
-       "1499        29950.755087        0.126636    0.664064     0.126636   \n",
+       "                  Frequency_Variance  StDev_Contrast  Mean_Noise  StDev_Noise  \\\n",
+       "image (263).jpg          1701.684807        0.144301    0.071738     0.144301   \n",
+       "image (799).jpg          5247.412525        0.228525    0.166876     0.228525   \n",
+       "image (1385).jpg         6443.700026        0.251777    0.186903     0.251777   \n",
+       "image (1405).jpg         6961.454301        0.269340    0.183527     0.269340   \n",
+       "image (388).jpg          3356.495539        0.191576    0.120490     0.191576   \n",
+       "...                              ...             ...         ...          ...   \n",
+       "image (1772).jpg        28356.807145        0.086109    0.652138     0.086109   \n",
+       "image (892).jpg         15556.956061        0.096675    0.477534     0.096675   \n",
+       "image (780).jpg         27712.195356        0.108694    0.641127     0.108694   \n",
+       "image (372).jpg         26638.859475        0.092776    0.630771     0.092776   \n",
+       "image (936).jpg         29950.755087        0.126636    0.664064     0.126636   \n",
        "\n",
-       "      Minimum_Intensity  Maximum_Intensity  Is_Healthy    Disease  \n",
-       "0              0.000000           0.769722        True       None  \n",
-       "1              0.000000           0.813731        True       None  \n",
-       "2              0.000000           0.957362        True       None  \n",
-       "3              0.000000           0.984315        True       None  \n",
-       "4              0.000000           0.708468        True       None  \n",
-       "...                 ...                ...         ...        ...  \n",
-       "1495           0.162585           0.987842       False  Black_rot  \n",
-       "1496           0.120117           0.980223       False  Black_rot  \n",
-       "1497           0.181121           0.994077       False  Black_rot  \n",
-       "1498           0.167936           0.987366       False  Black_rot  \n",
-       "1499           0.085137           0.988973       False  Black_rot  \n",
+       "                  Minimum_Intensity  Maximum_Intensity  Is_Healthy    Disease  \n",
+       "image (263).jpg            0.000000           0.769722        True       None  \n",
+       "image (799).jpg            0.000000           0.813731        True       None  \n",
+       "image (1385).jpg           0.000000           0.957362        True       None  \n",
+       "image (1405).jpg           0.000000           0.984315        True       None  \n",
+       "image (388).jpg            0.000000           0.708468        True       None  \n",
+       "...                             ...                ...         ...        ...  \n",
+       "image (1772).jpg           0.162585           0.987842       False  Black_rot  \n",
+       "image (892).jpg            0.120117           0.980223       False  Black_rot  \n",
+       "image (780).jpg            0.181121           0.994077       False  Black_rot  \n",
+       "image (372).jpg            0.167936           0.987366       False  Black_rot  \n",
+       "image (936).jpg            0.085137           0.988973       False  Black_rot  \n",
        "\n",
-       "[1500 rows x 12 columns]"
+       "[1500 rows x 11 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -620,7 +620,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Image</th>\n",
        "      <th>Edge_Count</th>\n",
        "      <th>Re(Mean_Frequency)</th>\n",
        "      <th>Im(Mean_Frequency)</th>\n",
@@ -636,8 +635,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>image (263).jpg</td>\n",
+       "      <th>image (263).jpg</th>\n",
        "      <td>1111</td>\n",
        "      <td>0.484367</td>\n",
        "      <td>-2.818926e-18</td>\n",
@@ -651,8 +649,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>image (799).jpg</td>\n",
+       "      <th>image (799).jpg</th>\n",
        "      <td>1476</td>\n",
        "      <td>0.374271</td>\n",
        "      <td>5.366801e-17</td>\n",
@@ -666,8 +663,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>image (1385).jpg</td>\n",
+       "      <th>image (1385).jpg</th>\n",
        "      <td>1749</td>\n",
        "      <td>0.304890</td>\n",
        "      <td>3.632077e-17</td>\n",
@@ -681,8 +677,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>image (1405).jpg</td>\n",
+       "      <th>image (1405).jpg</th>\n",
        "      <td>3357</td>\n",
        "      <td>0.427836</td>\n",
        "      <td>2.255141e-17</td>\n",
@@ -696,8 +691,7 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>image (388).jpg</td>\n",
+       "      <th>image (388).jpg</th>\n",
        "      <td>1210</td>\n",
        "      <td>0.451401</td>\n",
        "      <td>-8.673617e-18</td>\n",
@@ -723,11 +717,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1495</th>\n",
-       "      <td>image (1772).jpg</td>\n",
+       "      <th>image (1772).jpg</th>\n",
        "      <td>3122</td>\n",
        "      <td>0.728791</td>\n",
        "      <td>1.864828e-17</td>\n",
@@ -741,8 +733,7 @@
        "      <td>Black_rot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1496</th>\n",
-       "      <td>image (892).jpg</td>\n",
+       "      <th>image (892).jpg</th>\n",
        "      <td>6965</td>\n",
        "      <td>0.555556</td>\n",
        "      <td>6.938894e-18</td>\n",
@@ -756,8 +747,7 @@
        "      <td>Black_rot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1497</th>\n",
-       "      <td>image (780).jpg</td>\n",
+       "      <th>image (780).jpg</th>\n",
        "      <td>13604</td>\n",
        "      <td>0.531126</td>\n",
        "      <td>6.938894e-18</td>\n",
@@ -771,8 +761,7 @@
        "      <td>Black_rot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1498</th>\n",
-       "      <td>image (372).jpg</td>\n",
+       "      <th>image (372).jpg</th>\n",
        "      <td>4830</td>\n",
        "      <td>0.421178</td>\n",
        "      <td>2.255141e-17</td>\n",
@@ -786,8 +775,7 @@
        "      <td>Black_rot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1499</th>\n",
-       "      <td>image (936).jpg</td>\n",
+       "      <th>image (936).jpg</th>\n",
        "      <td>7014</td>\n",
        "      <td>0.559309</td>\n",
        "      <td>5.984796e-17</td>\n",
@@ -802,7 +790,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1500 rows × 12 columns</p>\n",
+       "<p>1500 rows × 11 columns</p>\n",
        "</div>"
       ]
      },
@@ -816,8 +804,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-27T17:35:18.466434Z",
-     "start_time": "2025-03-27T17:35:18.465254Z"
+     "end_time": "2025-03-27T19:37:24.873020Z",
+     "start_time": "2025-03-27T19:37:24.870710Z"
     }
    },
    "cell_type": "code",
