Added Individual Datasets for each plant to reduce generalization in ML Model

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -14,8 +14,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:04.574667Z",
-     "start_time": "2025-03-28T04:47:04.522839Z"
+     "end_time": "2025-03-28T20:11:59.424698Z",
+     "start_time": "2025-03-28T20:11:59.369443Z"
     }
    },
    "source": [
@@ -38,8 +38,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:39.902438Z",
-     "start_time": "2025-03-28T04:47:04.577390Z"
+     "end_time": "2025-03-28T20:12:47.120843Z",
+     "start_time": "2025-03-28T20:11:59.427528Z"
     }
    },
    "source": [
@@ -47,6 +47,7 @@
     "filename = []\n",
     "Type = []\n",
     "is_healthy = []\n",
+    "plant_name = []\n",
     "for folder in os.listdir('Plant_leave_diseases_dataset_without_augmentation'):\n",
     "    if folder.endswith(\".DS_Store\"):\n",
     "        continue\n",
@@ -57,6 +58,7 @@
     "            image = Image.fromarray(image)\n",
     "            image = image.resize((64, 64))\n",
     "            image_pixel_array.append(image)\n",
+    "            plant_name.append(folder.partition(\"___\")[0])\n",
     "        if \"___healthy\" in folder:\n",
     "            is_healthy.append(True)\n",
     "            Type.append(\"Healthy\")\n",
@@ -87,8 +89,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:48.553580Z",
-     "start_time": "2025-03-28T04:47:39.996283Z"
+     "end_time": "2025-03-28T20:12:55.575091Z",
+     "start_time": "2025-03-28T20:12:47.216290Z"
     }
    },
    "source": [
@@ -153,8 +155,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:51.534935Z",
-     "start_time": "2025-03-28T04:47:48.617960Z"
+     "end_time": "2025-03-28T20:12:59.322282Z",
+     "start_time": "2025-03-28T20:12:55.760408Z"
     }
    },
    "source": [
@@ -218,8 +220,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:54.052416Z",
-     "start_time": "2025-03-28T04:47:51.539612Z"
+     "end_time": "2025-03-28T20:13:01.887139Z",
+     "start_time": "2025-03-28T20:12:59.332564Z"
     }
    },
    "source": [
@@ -279,8 +281,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:58.006916Z",
-     "start_time": "2025-03-28T04:47:54.064018Z"
+     "end_time": "2025-03-28T20:13:05.938055Z",
+     "start_time": "2025-03-28T20:13:01.898048Z"
     }
    },
    "source": [
@@ -335,16 +337,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:58.540533Z",
-     "start_time": "2025-03-28T04:47:58.018944Z"
+     "end_time": "2025-03-28T20:13:06.491796Z",
+     "start_time": "2025-03-28T20:13:05.950052Z"
     }
    },
    "cell_type": "code",
    "source": [
     "Plant_Data = []\n",
-    "print(\"Length of Type:\", len(Type))\n",
-    "print(\"Length of image_pixel_array:\", len(image_pixel_array))\n",
-    "print(\"Length of is_healthy:\", len(is_healthy))\n",
     "\n",
     "for image in range(num_images):\n",
     "    print(f\"Appending Disease Label: {Type[image]}\")\n",
@@ -366,16 +365,13 @@
     "\n",
     "Plant_Dataset = pd.DataFrame(Plant_Data, columns=feature_names)\n",
     "Plant_Dataset.index = filename\n",
-    "Plant_Dataset.to_csv('Feature_Extracted_Plant_Dataset.csv', index=False)"
+    "Plant_Dataset.to_csv('Feature_Extracted_Plant_Dataset.csv', index=filename)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of Type: 54305\n",
-      "Length of image_pixel_array: 52803\n",
-      "Length of is_healthy: 54305\n",
       "Appending Disease Label: Healthy\n",
       "Appending Disease Label: Healthy\n",
       "Appending Disease Label: Healthy\n",
@@ -53187,8 +53183,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:58.710488Z",
-     "start_time": "2025-03-28T04:47:58.683752Z"
+     "end_time": "2025-03-28T20:13:06.524929Z",
+     "start_time": "2025-03-28T20:13:06.506015Z"
     }
    },
    "cell_type": "code",
@@ -53369,8 +53365,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:58.801291Z",
-     "start_time": "2025-03-28T04:47:58.794435Z"
+     "end_time": "2025-03-28T20:13:06.545306Z",
+     "start_time": "2025-03-28T20:13:06.538460Z"
     }
    },
    "cell_type": "code",
@@ -53649,8 +53645,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:58.840877Z",
-     "start_time": "2025-03-28T04:47:58.833554Z"
+     "end_time": "2025-03-28T20:13:06.576021Z",
+     "start_time": "2025-03-28T20:13:06.571930Z"
     }
    },
    "cell_type": "code",
@@ -53674,10 +53670,59 @@
    "execution_count": 10
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Split Data into a per-plant Basis ####"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-28T04:47:59.248909Z",
-     "start_time": "2025-03-28T04:47:59.247455Z"
+     "end_time": "2025-03-28T20:13:07.033949Z",
+     "start_time": "2025-03-28T20:13:06.649542Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "Individual_Plant_Datasets = Plant_Dataset\n",
+    "Individual_Plant_Datasets['Plant_Name'] = plant_name\n",
+    "Individual_Plant_Datasets = {plant: df for plant, df in Individual_Plant_Datasets.groupby(\"Plant_Name\")}\n",
+    "\n",
+    "output_folder = \"Individual Plant Datasets\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "for plant, df in Individual_Plant_Datasets.items():\n",
+    "    df.drop(columns=[\"Plant_Name\"], inplace=True)\n",
+    "    file_path = os.path.join(output_folder, f\"{plant}.csv\")\n",
+    "    df.to_csv(file_path, index=True)\n"
+   ],
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-28T20:13:07.122860Z",
+     "start_time": "2025-03-28T20:13:07.121424Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(Individual_Plant_Datasets.keys())",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Apple', 'Blueberry', 'Cherry', 'Corn', 'Grape', 'Orange', 'Peach', 'Pepper,_bell', 'Potato', 'Raspberry', 'Soybean', 'Squash', 'Strawberry', 'Tomato'])\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-28T20:13:07.140599Z",
+     "start_time": "2025-03-28T20:13:07.139321Z"
     }
    },
    "cell_type": "code",
